--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "parcel-jest-base",
+  "name": "primer_parial",
   "version": "1.0.0",
-  "description": "",
+  "description": "npm install",
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
@@ -17,5 +17,17 @@
     "babel-jest": "^27.4.6",
     "jest": "^27.4.7",
     "parcel": "^2.2.0"
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Luferchoo/UCB-Twitter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Luferchoo/UCB-Twitter/issues"
+  },
+  "homepage": "https://github.com/Luferchoo/UCB-Twitter#readme",
+  "dependencies": {
+    "parcel-bundler": "^1.12.5"
   }
 }
